Use 'include-dirs' instead of 'cpp-options'.
Fixes a Cabal warning.

--- a/ansi-terminal.cabal
+++ b/ansi-terminal.cabal
@@ -29,7 +29,7 @@ Library
         
         Other-Modules:          System.Console.ANSI.Common
         
-        Cpp-Options:            -Iincludes
+        Include-Dirs:           includes
         
         if os(windows)
                 Build-Depends:          Win32 >= 2.0
