--- a/vty.cabal
+++ b/vty.cabal
@@ -92,7 +92,7 @@ test-suite verify-attribute-ops
   hs-source-dirs:      src test
   test-module:         VerifyAttributeOps
   build-depends:       Cabal == 1.17.*,
-                       QuickCheck == 2.4.*,
+                       QuickCheck >= 2.4,
                        random == 1.0.*,
                        base >= 4 && < 5,
                        bytestring,
@@ -143,7 +143,7 @@ test-suite verify-using-mock-terminal
   include-dirs:        cbits
 
   build-depends:       Cabal == 1.17.*,
-                       QuickCheck == 2.4.*,
+                       QuickCheck >= 2.4,
                        random == 1.0.*,
                        base >= 4 && < 5,
                        bytestring,
@@ -194,7 +194,7 @@ test-suite verify-display-attributes
   include-dirs:        cbits
 
   build-depends:       Cabal == 1.17.*,
-                       QuickCheck == 2.4.*,
+                       QuickCheck >= 2.4,
                        random == 1.0.*,
                        base >= 4 && < 5,
                        bytestring,
@@ -222,7 +222,7 @@ test-suite verify-empty-image-props
                        Verify
 
   build-depends:       Cabal == 1.17.*,
-                       QuickCheck == 2.4.*,
+                       QuickCheck >= 2.4,
                        random == 1.0.*,
                        base >= 4 && < 5,
                        bytestring,
@@ -253,7 +253,7 @@ test-suite verify-eval-terminfo-caps
                        Verify
 
   build-depends:       Cabal == 1.17.*,
-                       QuickCheck == 2.4.*,
+                       QuickCheck >= 2.4,
                        random == 1.0.*,
                        base >= 4 && < 5,
                        bytestring,
@@ -296,7 +296,7 @@ test-suite verify-image-ops
   include-dirs:        cbits
 
   build-depends:       Cabal == 1.17.*,
-                       QuickCheck == 2.4.*,
+                       QuickCheck >= 2.4,
                        random == 1.0.*,
                        base >= 4 && < 5,
                        bytestring,
@@ -333,7 +333,7 @@ test-suite verify-image-trans
   include-dirs:        cbits
 
   build-depends:       Cabal == 1.17.*,
-                       QuickCheck == 2.4.*,
+                       QuickCheck >= 2.4,
                        random == 1.0.*,
                        base >= 4 && < 5,
                        bytestring,
@@ -380,7 +380,7 @@ test-suite verify-inline
   include-dirs:        cbits
 
   build-depends:       Cabal == 1.17.*,
-                       QuickCheck == 2.4.*,
+                       QuickCheck >= 2.4,
                        random == 1.0.*,
                        base >= 4 && < 5,
                        bytestring,
@@ -411,7 +411,7 @@ test-suite verify-parse-terminfo-caps
   include-dirs:        cbits
 
   build-depends:       Cabal == 1.17.*,
-                       QuickCheck == 2.4.*,
+                       QuickCheck >= 2.4,
                        random == 1.0.*,
                        base >= 4 && < 5,
                        bytestring,
@@ -441,7 +441,7 @@ test-suite verify-picture-ops
   include-dirs:        cbits
 
   build-depends:       Cabal == 1.17.*,
-                       QuickCheck == 2.4.*,
+                       QuickCheck >= 2.4,
                        random == 1.0.*,
                        base >= 4 && < 5,
                        bytestring,
@@ -492,7 +492,7 @@ test-suite verify-picture-to-span
   include-dirs:        cbits
 
   build-depends:       Cabal == 1.17.*,
-                       QuickCheck == 2.4.*,
+                       QuickCheck >= 2.4,
                        random == 1.0.*,
                        base >= 4 && < 5,
                        bytestring,
@@ -543,7 +543,7 @@ test-suite verify-span-ops
   include-dirs:        cbits
 
   build-depends:       Cabal == 1.17.*,
-                       QuickCheck == 2.4.*,
+                       QuickCheck >= 2.4,
                        random == 1.0.*,
                        base >= 4 && < 5,
                        bytestring,
@@ -577,7 +577,7 @@ test-suite verify-utf8-width
   include-dirs:        cbits
 
   build-depends:       Cabal == 1.17.*,
-                       QuickCheck == 2.4.*,
+                       QuickCheck >= 2.4,
                        random == 1.0.*,
                        base >= 4 && < 5,
                        bytestring,
@@ -587,6 +587,36 @@ test-suite verify-utf8-width
                        mtl >= 1.1.1.0 && < 2.2,
                        parallel >= 2.2 && < 3.3,
                        parsec >= 2 && < 4,
+                       terminfo >= 0.3 && < 0.4,
+                       unix,
+                       utf8-string >= 0.3 && < 0.4,
+                       vector >= 0.7
+
+executable vty-interactive-terminal-test
+  main-is:             interactive_terminal_test.hs
+
+  default-language:    Haskell2010
+
+  hs-source-dirs:      src test
+
+  c-sources:           cbits/gwinsz.c
+                       cbits/set_term_timing.c
+                       cbits/mk_wcwidth.c
+
+  include-dirs:        cbits
+
+  build-depends:       Cabal == 1.17.*,
+                       QuickCheck >= 2.4,
+                       random == 1.0.*,
+                       base >= 4 && < 5,
+                       bytestring,
+                       containers,
+                       deepseq >= 1.1 && < 1.4,
+                       ghc-prim,
+                       mtl >= 1.1.1.0 && < 2.2,
+                       parallel >= 2.2 && < 3.3,
+                       parsec >= 2 && < 4,
+                       string-qq,
                        terminfo >= 0.3 && < 0.4,
                        unix,
                        utf8-string >= 0.3 && < 0.4,
@@ -606,7 +636,6 @@ test-suite verify-utf8-width
 -- Verify/Graphics/Vty/Image.hs
 -- Verify/Graphics/Vty/Picture.hs
 -- Verify/Graphics/Vty/Span.hs
--- interactive_terminal_test.hs
 -- vty_inline_example.hs
 -- vty_issue_18.hs
 -- yi_issue_264.hs
