--- a/vty.cabal
+++ b/vty.cabal
@@ -1,5 +1,5 @@
 name:                vty
-version:             4.7.1
+version:             4.7.2
 license:             BSD3
 license-file:        LICENSE
 author:              AUTHORS
@@ -14,8 +14,8 @@ description:
   Included in the source distribution is a program test/interactive_terminal_test.hs that
   demonstrates the various features. 
   .
-  If your terminal is not behaving as expected the results of the test/interactive_terminal_test.hs
-  program should be sent to the Vty maintainter to aid in debugging the issue.
+  If your terminal is not behaving as expected the results of the vty-interactive-terminal-test
+  executable should be sent to the Vty maintainter to aid in debugging the issue.
   .
   Notable infelicities: Sometimes poor efficiency; Assumes UTF-8 character encoding support by the
   terminal;
@@ -26,7 +26,7 @@ description:
   .
   &#169; 2006-2007 Stefan O'Rear; BSD3 license.
   .
-  &#169; 2008-2012 Corey O'Connor; BSD3 license.
+  &#169; Corey O'Connor; BSD3 license.
 -- the test suites require >= 1.17.0
 cabal-version:        >= 1.14.0
 build-type:           Simple
@@ -52,16 +52,17 @@ library
                        vector >= 0.7
 
   exposed-modules:     Graphics.Vty
-                       Graphics.Vty.Terminal
-                       Graphics.Vty.LLInput
                        Graphics.Vty.Attributes
+                       Graphics.Vty.DisplayRegion
+                       Graphics.Vty.Error
                        Graphics.Vty.Image
                        Graphics.Vty.Inline
+                       Graphics.Vty.LLInput
                        Graphics.Vty.Picture
-                       Graphics.Vty.DisplayRegion
+                       Graphics.Vty.Terminal
+                       Codec.Binary.UTF8.Width
 
-  other-modules:       Codec.Binary.UTF8.Width
-                       Data.Marshalling
+  other-modules:       Data.Marshalling
                        Data.Terminfo.Parse
                        Data.Terminfo.Eval
                        Graphics.Vty.DisplayAttributes
@@ -604,10 +605,7 @@ executable vty-interactive-terminal-test
 
   include-dirs:        cbits
 
-  build-depends:       Cabal == 1.17.*,
-                       QuickCheck >= 2.4,
-                       random == 1.0.*,
-                       base >= 4 && < 5,
+  build-depends:       base >= 4 && < 5,
                        bytestring,
                        containers,
                        deepseq >= 1.1 && < 1.4,
