--- a/vty.cabal
+++ b/vty.cabal
@@ -620,7 +620,7 @@ executable vty-interactive-terminal-test
                        vector >= 0.7
 
 executable vty-benchmark
-  main-is:             benchmarsk.hs
+  main-is:             benchmark.hs
 
   default-language:    Haskell2010
 
@@ -640,6 +640,7 @@ executable vty-benchmark
                        mtl >= 1.1.1.0 && < 2.2,
                        parallel >= 2.2 && < 3.3,
                        parsec >= 2 && < 4,
+                       random == 1.0.*,
                        string-qq,
                        terminfo >= 0.3 && < 0.4,
                        unix,
