--- a/vty.cabal
+++ b/vty.cabal
@@ -30,7 +30,7 @@ description:
 -- the test suites require >= 1.17.0
 cabal-version:        >= 1.14.0
 build-type:           Simple
-data-files:          README,
+data-files:          README.md,
                      TODO,
                      AUTHORS,
                      CHANGELOG,
@@ -634,12 +634,14 @@ executable vty-benchmark
 
   build-depends:       base >= 4 && < 5,
                        bytestring,
+                       Cabal == 1.17.*,
                        containers,
                        deepseq >= 1.1 && < 1.4,
                        ghc-prim,
                        mtl >= 1.1.1.0 && < 2.2,
                        parallel >= 2.2 && < 3.3,
                        parsec >= 2 && < 4,
+                       QuickCheck >= 2.4,
                        random == 1.0.*,
                        string-qq,
                        terminfo >= 0.3 && < 0.4,
