--- a/vty.cabal
+++ b/vty.cabal
@@ -43,6 +43,7 @@ library
                        containers,
                        deepseq >= 1.1 && < 1.4,
                        ghc-prim,
+                       lens,
                        mtl >= 1.1.1.0 && < 2.2,
                        parallel >= 2.2 && < 3.3,
                        parsec >= 2 && < 4,
@@ -99,6 +100,7 @@ test-suite verify-attribute-ops
                        containers,
                        deepseq >= 1.1 && < 1.4,
                        ghc-prim,
+                       lens,
                        mtl >= 1.1.1.0 && < 2.2,
                        parallel >= 2.2 && < 3.3,
                        parsec >= 2 && < 4,
@@ -150,6 +152,7 @@ test-suite verify-using-mock-terminal
                        containers,
                        deepseq >= 1.1 && < 1.4,
                        ghc-prim,
+                       lens,
                        mtl >= 1.1.1.0 && < 2.2,
                        parallel >= 2.2 && < 3.3,
                        parsec >= 2 && < 4,
@@ -201,6 +204,7 @@ test-suite verify-display-attributes
                        containers,
                        deepseq >= 1.1 && < 1.4,
                        ghc-prim,
+                       lens,
                        mtl >= 1.1.1.0 && < 2.2,
                        parallel >= 2.2 && < 3.3,
                        parsec >= 2 && < 4,
@@ -229,6 +233,7 @@ test-suite verify-empty-image-props
                        containers,
                        deepseq >= 1.1 && < 1.4,
                        ghc-prim,
+                       lens,
                        mtl >= 1.1.1.0 && < 2.2,
                        parallel >= 2.2 && < 3.3,
                        parsec >= 2 && < 4,
@@ -260,6 +265,7 @@ test-suite verify-eval-terminfo-caps
                        containers,
                        deepseq >= 1.1 && < 1.4,
                        ghc-prim,
+                       lens,
                        mtl >= 1.1.1.0 && < 2.2,
                        parallel >= 2.2 && < 3.3,
                        parsec >= 2 && < 4,
@@ -303,6 +309,7 @@ test-suite verify-image-ops
                        containers,
                        deepseq >= 1.1 && < 1.4,
                        ghc-prim,
+                       lens,
                        mtl >= 1.1.1.0 && < 2.2,
                        parallel >= 2.2 && < 3.3,
                        parsec >= 2 && < 4,
@@ -340,6 +347,7 @@ test-suite verify-image-trans
                        containers,
                        deepseq >= 1.1 && < 1.4,
                        ghc-prim,
+                       lens,
                        mtl >= 1.1.1.0 && < 2.2,
                        parallel >= 2.2 && < 3.3,
                        parsec >= 2 && < 4,
@@ -387,6 +395,7 @@ test-suite verify-inline
                        containers,
                        deepseq >= 1.1 && < 1.4,
                        ghc-prim,
+                       lens,
                        mtl >= 1.1.1.0 && < 2.2,
                        parallel >= 2.2 && < 3.3,
                        parsec >= 2 && < 4,
@@ -418,6 +427,7 @@ test-suite verify-parse-terminfo-caps
                        containers,
                        deepseq >= 1.1 && < 1.4,
                        ghc-prim,
+                       lens,
                        mtl >= 1.1.1.0 && < 2.2,
                        parallel >= 2.2 && < 3.3,
                        parsec >= 2 && < 4,
@@ -448,6 +458,7 @@ test-suite verify-picture-ops
                        containers,
                        deepseq >= 1.1 && < 1.4,
                        ghc-prim,
+                       lens,
                        mtl >= 1.1.1.0 && < 2.2,
                        parallel >= 2.2 && < 3.3,
                        parsec >= 2 && < 4,
@@ -499,6 +510,7 @@ test-suite verify-picture-to-span
                        containers,
                        deepseq >= 1.1 && < 1.4,
                        ghc-prim,
+                       lens,
                        mtl >= 1.1.1.0 && < 2.2,
                        parallel >= 2.2 && < 3.3,
                        parsec >= 2 && < 4,
@@ -550,6 +562,7 @@ test-suite verify-span-ops
                        containers,
                        deepseq >= 1.1 && < 1.4,
                        ghc-prim,
+                       lens,
                        mtl >= 1.1.1.0 && < 2.2,
                        parallel >= 2.2 && < 3.3,
                        parsec >= 2 && < 4,
@@ -584,6 +597,7 @@ test-suite verify-utf8-width
                        containers,
                        deepseq >= 1.1 && < 1.4,
                        ghc-prim,
+                       lens,
                        mtl >= 1.1.1.0 && < 2.2,
                        parallel >= 2.2 && < 3.3,
                        parsec >= 2 && < 4,
@@ -610,6 +624,7 @@ executable vty-interactive-terminal-test
                        containers,
                        deepseq >= 1.1 && < 1.4,
                        ghc-prim,
+                       lens,
                        mtl >= 1.1.1.0 && < 2.2,
                        parallel >= 2.2 && < 3.3,
                        parsec >= 2 && < 4,
@@ -638,6 +653,7 @@ executable vty-benchmark
                        containers,
                        deepseq >= 1.1 && < 1.4,
                        ghc-prim,
+                       lens,
                        mtl >= 1.1.1.0 && < 2.2,
                        parallel >= 2.2 && < 3.3,
                        parsec >= 2 && < 4,
